@@ -87,3 +87,4 @@ v0.7
 * nfqws2, zapret-lib : structure conntrack in/out positions. pass in desync.track.pos.{client,server,direct,reverse} position tables
 * nfqws2: autohostlist: trigger RST and http redirect failures only within specified relative sequence
 * nfqws2: autohostlist: trigger http redirect failure if payload is http_req without connection proto check
+* nfqws2: push desync.track.pos.dt as float with nsec accuracy
